# h4-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.real.yml  docker-compose.yml  main.py  misty-singing-starfish.md  requirements.txt
agentsec/: __init__.py  config.py  graph.py  llm.py  patching.py  prompts.py  reporting.py  schema.py  session.py  state.py
agentsec_mcp/: __init__.py  __main__.py  server.py
app/: main.py
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/stubs/agentsec/: README.md  pyproject.toml
backend/stubs/agentsec/src/agentsec/: __init__.py  session.py
cli/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md
cli/src/agent_scan_cli/: __init__.py  cli.py  client.py  interactive.py  markdown.py  mock_server.py  terminal.py
cli/tests/: test_cli.py  test_client.py  test_markdown.py  test_mock_server.py
deploy/: backend.real.Dockerfile
docs/: improvement-plan.md  large-repo-plan.md  orchestrator-plan.md
eval/: run_eval.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  env.production.example  eslint.config.mjs  i18n.ts  middleware.ts  navigation.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json
mcp/: agentsec.mcp.json  scanners.mcp.json
opencode-prompts/: README.md
tests/: test_graph.py  test_graph_smoke.py  test_index.py  test_patching.py  test_reporting.py  test_scan.py  test_schema.py  test_sessions.py  (+2 more)
(+94 files in other folders)
